hphp/test/zend/good/ext/standard/tests/misc/time_nanosleep_error4.php.skipif
<?php
if (strtoupper(substr(PHP_OS, 0, 3)) === 'WIN') die("skip Test is not valid for Windows");
if (!function_exists('time_nanosleep')) die("skip");
?>